Bug 243179 - Wrong Taborder in Settings->Templates->Location|Contact
Summary: Wrong Taborder in Settings->Templates->Location|Contact
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Setup-Templates (other bugs)
Version First Reported In: 1.3.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-29 17:43 UTC by Florian Reinhard
Modified: 2017-08-09 20:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reinhard 2010-06-29 17:43:19 UTC
Version:           1.3.0 (using Devel) 
OS:                Linux



Reproducible: Didn't try


Actual Results:  
1. go to Settings->Templates->Location|Contact
2. give one of the lineedits the focus
3. hit <tab> to cylcle through them

Expected Results:  
focus gets passed to the field below

focus gets passed randomly
Comment 1 Andi Clemens 2010-09-25 15:36:32 UTC
SVN commit 1179448 by aclemens:

Fix taborder in Settings->Template

BUG: 243179

 M  +2 -1      NEWS  
 M  +53 -37    libs/template/templatepanel.cpp  
 M  +8 -1      utilities/setup/setuptemplate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1179448