Fix taborder in Settings->Template

BUG: 243179

svn path=/trunk/extragear/graphics/digikam/; revision=1179448